Fixed unaligned project title

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -516,6 +516,7 @@ body {
                 &__title {
                     font-size: 1.3rem;
                     font-weight: 500;
+                    text-align: center;
                 }
 
                 &__text {
